MESSAGE("Generating build dependencies for cegui-freya")

SET( CEGUI_SOURCE 
include/CEGUI.h
include/CEGUIBase.h
include/CEGUIBasicRenderedStringParser.h
include/CEGUIBiDiVisualMapping.h
include/CEGUIBoundSlot.h
include/CEGUICentredRenderedString.h
include/CEGUIcolour.h
include/CEGUIColourRect.h
include/CEGUIConfig.h
include/CEGUIConfig_xmlHandler.h
include/CEGUICoordConverter.h
include/CEGUIDataContainer.h
include/CEGUIDefaultLogger.h
include/CEGUIDefaultRenderedStringParser.h
include/CEGUIDefaultResourceProvider.h
include/CEGUIDynamicModule.h
include/CEGUIEvent.h
include/CEGUIEventArgs.h
include/CEGUIEventSet.h
include/CEGUIExceptions.h
include/CEGUIFactoryModule.h
include/CEGUIFont.h
include/CEGUIFont_xmlHandler.h
include/CEGUIFontGlyph.h
include/CEGUIFontManager.h
include/CEGUIFormattedRenderedString.h
include/CEGUIForwardRefs.h
include/CEGUIFreeFunctionSlot.h
include/CEGUIFreeTypeFont.h
include/CEGUIFribidiVisualMapping.h
include/CEGUIFunctorCopySlot.h
include/CEGUIFunctorPointerSlot.h
include/CEGUIFunctorReferenceBinder.h
include/CEGUIFunctorReferenceSlot.h
include/CEGUIGeometryBuffer.h
include/CEGUIGlobalEventSet.h
include/CEGUIGUILayout_xmlHandler.h
include/CEGUIImage.h
include/CEGUIImageCodec.h
include/CEGUIImageset.h
include/CEGUIImageset_xmlHandler.h
include/CEGUIImagesetManager.h
include/CEGUIInputEvent.h
include/CEGUIIteratorBase.h
include/CEGUIJustifiedRenderedString.h
include/CEGUILeftAlignedRenderedString.h
include/CEGUILogger.h   
include/CEGUIMemberFunctionSlot.h
include/CEGUIMinibidiVisualMapping.h
include/CEGUIMouseCursor.h 
include/CEGUINamedXMLResourceManager.h
include/CEGUIPCRERegexMatcher.h
include/CEGUIPixmapFont.h 
include/CEGUIProperty.h
include/CEGUIPropertyHelper.h
include/CEGUIPropertySet.h
include/CEGUIRect.h
include/CEGUIRefCounted.h
include/CEGUIRegexMatcher.h
include/CEGUIRenderedString.h
include/CEGUIRenderedStringComponent.h
include/CEGUIRenderedStringImageComponent.h
include/CEGUIRenderedStringParser.h   
include/CEGUIRenderedStringTextComponent.h
include/CEGUIRenderedStringWidgetComponent.h
include/CEGUIRenderedStringWordWrapper.h
include/CEGUIRenderEffect.h
include/CEGUIRenderer.h
include/CEGUIRenderingContext.h
include/CEGUIRenderingRoot.h
include/CEGUIRenderingSurface.h
include/CEGUIRenderingWindow.h
include/CEGUIRenderQueue.h
include/CEGUIRenderTarget.h
include/CEGUIResourceProvider.h
include/CEGUIRightAlignedRenderedString.h
include/CEGUIScheme.h
include/CEGUIScheme_xmlHandler.h
include/CEGUISchemeManager.h
include/CEGUIScriptModule.h
include/CEGUISingleton.h
include/CEGUISize.h
include/CEGUISlotFunctorBase.h
include/CEGUIString.h
include/CEGUISubscriberSlot.h
include/CEGUISystem.h
include/CEGUITexture.h
include/CEGUITextureTarget.h
include/CEGUITextUtils.h
include/CEGUITplWindowFactory.h
include/CEGUITplWindowRendererFactory.h
include/CEGUITplWRFactoryRegisterer.h
include/CEGUIUDim.h
include/CEGUIVector.h
include/CEGUIVersion.h
include/CEGUIVertex.h
include/CEGUIWidgetModule.h
include/CEGUIWindow.h
include/CEGUIWindowFactory.h
include/CEGUIWindowFactoryManager.h
include/CEGUIWindowManager.h
include/CEGUIWindowProperties.h
include/CEGUIWindowRenderer.h
include/CEGUIWindowRendererManager.h
include/CEGUIWindowRendererModule.h
include/CEGUIWRFactoryRegisterer.h
include/CEGUIXMLAttributes.h
include/CEGUIXMLHandler.h
include/CEGUIXMLParser.h
include/CEGUIXMLSerializer.h
include/elements/CEGUIAll.h
include/elements/CEGUIButtonBase.h
include/elements/CEGUICheckbox.h
include/elements/CEGUICheckboxProperties.h
include/elements/CEGUIClippedContainer.h
include/elements/CEGUICombobox.h
include/elements/CEGUIComboboxProperties.h
include/elements/CEGUIComboDropList.h
include/elements/CEGUIDragContainer.h
include/elements/CEGUIDragContainerProperties.h
include/elements/CEGUIEditbox.h
include/elements/CEGUIEditboxProperties.h
include/elements/CEGUIFrameWindow.h
include/elements/CEGUIFrameWindowProperties.h
include/elements/CEGUIGroupBox.h
include/elements/CEGUIGUISheet.h
include/elements/CEGUIItemEntry.h
include/elements/CEGUIItemEntryProperties.h
include/elements/CEGUIItemListBase.h
include/elements/CEGUIItemListBaseProperties.h
include/elements/CEGUIItemListbox.h
include/elements/CEGUIItemListboxProperties.h
include/elements/CEGUIListbox.h
include/elements/CEGUIListboxItem.h
include/elements/CEGUIListboxProperties.h
include/elements/CEGUIListboxTextItem.h
include/elements/CEGUIListHeader.h
include/elements/CEGUIListHeaderProperties.h
include/elements/CEGUIListHeaderSegment.h
include/elements/CEGUIListHeaderSegmentProperties.h
include/elements/CEGUIMenubar.h
include/elements/CEGUIMenuBase.h
include/elements/CEGUIMenuBaseProperties.h
include/elements/CEGUIMenuItem.h
include/elements/CEGUIMultiColumnList.h
include/elements/CEGUIMultiColumnListProperties.h
include/elements/CEGUIMultiLineEditbox.h
include/elements/CEGUIMultiLineEditboxProperties.h
include/elements/CEGUIPopupMenu.h
include/elements/CEGUIPopupMenuProperties.h
include/elements/CEGUIProgressBar.h
include/elements/CEGUIProgressBarProperties.h
include/elements/CEGUIPushButton.h
include/elements/CEGUIRadioButton.h
include/elements/CEGUIRadioButtonProperties.h
include/elements/CEGUIScrollablePane.h
include/elements/CEGUIScrollablePaneProperties.h
include/elements/CEGUIScrollbar.h
include/elements/CEGUIScrollbarProperties.h
include/elements/CEGUIScrolledContainer.h
include/elements/CEGUIScrolledContainerProperties.h
include/elements/CEGUIScrolledItemListBase.h
include/elements/CEGUIScrolledItemListBaseProperties.h
include/elements/CEGUISlider.h
include/elements/CEGUISliderProperties.h
include/elements/CEGUISpinner.h
include/elements/CEGUISpinnerProperties.h
include/elements/CEGUITabButton.h
include/elements/CEGUITabControl.h
include/elements/CEGUITabControlProperties.h
include/elements/CEGUIThumb.h
include/elements/CEGUIThumbProperties.h
include/elements/CEGUITitlebar.h
include/elements/CEGUITitlebarProperties.h
include/elements/CEGUITooltip.h
include/elements/CEGUITooltipProperties.h
include/elements/CEGUITree.h
include/elements/CEGUITreeItem.h
include/elements/CEGUITreeProperties.h
include/falagard/CEGUIFalagard_xmlHandler.h
include/falagard/CEGUIFalComponentBase.h
include/falagard/CEGUIFalDimensions.h
include/falagard/CEGUIFalEnums.h
include/falagard/CEGUIFalFrameComponent.h
include/falagard/CEGUIFalImageryComponent.h
include/falagard/CEGUIFalImagerySection.h
include/falagard/CEGUIFalLayerSpecification.h
include/falagard/CEGUIFalNamedArea.h
include/falagard/CEGUIFalPropertyDefinition.h
include/falagard/CEGUIFalPropertyDefinitionBase.h
include/falagard/CEGUIFalPropertyInitialiser.h
include/falagard/CEGUIFalPropertyLinkDefinition.h
include/falagard/CEGUIFalSectionSpecification.h
include/falagard/CEGUIFalStateImagery.h
include/falagard/CEGUIFalTextComponent.h
include/falagard/CEGUIFalWidgetComponent.h
include/falagard/CEGUIFalWidgetLookFeel.h
include/falagard/CEGUIFalWidgetLookManager.h
include/falagard/CEGUIFalXMLEnumHelper.h
include/ScriptingModules/LuaScriptModule/CEGUILua.h
include/ScriptingModules/LuaScriptModule/CEGUILuaFunctor.h
include/WindowRendererSets/Falagard/FalButton.h
include/WindowRendererSets/Falagard/FalDefault.h
include/WindowRendererSets/Falagard/FalEditbox.h
include/WindowRendererSets/Falagard/FalEditboxProperties.h
include/WindowRendererSets/Falagard/FalFrameWindow.h
include/WindowRendererSets/Falagard/FalItemEntry.h
include/WindowRendererSets/Falagard/FalItemListbox.h
include/WindowRendererSets/Falagard/FalListbox.h
include/WindowRendererSets/Falagard/FalListHeader.h
include/WindowRendererSets/Falagard/FalListHeaderProperties.h
include/WindowRendererSets/Falagard/FalListHeaderSegment.h
include/WindowRendererSets/Falagard/FalMenubar.h
include/WindowRendererSets/Falagard/FalMenuItem.h
include/WindowRendererSets/Falagard/FalModule.h
include/WindowRendererSets/Falagard/FalMultiColumnList.h
include/WindowRendererSets/Falagard/FalMultiLineEditbox.h
include/WindowRendererSets/Falagard/FalMultiLineEditboxProperties.h
include/WindowRendererSets/Falagard/FalPopupMenu.h
include/WindowRendererSets/Falagard/FalProgressBar.h
include/WindowRendererSets/Falagard/FalProgressBarProperties.h
include/WindowRendererSets/Falagard/FalScrollablePane.h
include/WindowRendererSets/Falagard/FalScrollbar.h
include/WindowRendererSets/Falagard/FalScrollbarProperties.h
include/WindowRendererSets/Falagard/FalSlider.h
include/WindowRendererSets/Falagard/FalSliderProperties.h
include/WindowRendererSets/Falagard/FalStatic.h
include/WindowRendererSets/Falagard/FalStaticImage.h
include/WindowRendererSets/Falagard/FalStaticImageProperties.h
include/WindowRendererSets/Falagard/FalStaticProperties.h
include/WindowRendererSets/Falagard/FalStaticText.h
include/WindowRendererSets/Falagard/FalStaticTextProperties.h
include/WindowRendererSets/Falagard/FalSystemButton.h
include/WindowRendererSets/Falagard/FalTabButton.h
include/WindowRendererSets/Falagard/FalTabControl.h
include/WindowRendererSets/Falagard/FalTabControlProperties.h
include/WindowRendererSets/Falagard/FalTitlebar.h
include/WindowRendererSets/Falagard/FalToggleButton.h
include/WindowRendererSets/Falagard/FalTooltip.h
include/WindowRendererSets/Falagard/FalTree.h
#include/XMLParserModules/XercesParser/CEGUIXercesParser.h
#include/XMLParserModules/XercesParser/CEGUIXercesParserModule.h
#include/XMLParserModules/XercesParser/CEGUIXercesParserProperties.h
#
src/ScriptingModules/LuaScriptModule/required.h

src/CEGUIBase.cpp
src/CEGUIBasicRenderedStringParser.cpp
src/CEGUIBiDiVisualMapping.cpp
src/CEGUIBoundSlot.cpp
src/CEGUICentredRenderedString.cpp
src/CEGUIcolour.cpp
src/CEGUIColourRect.cpp
src/CEGUIConfig_xmlHandler.cpp
src/CEGUICoordConverter.cpp
src/CEGUIDataContainer.cpp
src/CEGUIDefaultLogger.cpp
src/CEGUIDefaultRenderedStringParser.cpp
src/CEGUIDefaultResourceProvider.cpp
src/CEGUIDynamicModule.cpp
src/CEGUIEvent.cpp
src/CEGUIEventArgs.cpp
src/CEGUIEventSet.cpp
src/CEGUIEventSignal.cpp
src/CEGUIEventSignalSet.cpp
src/CEGUIExceptions.cpp
src/CEGUIFactoryModule.cpp
src/CEGUIFont.cpp
src/CEGUIFont_xmlHandler.cpp
src/CEGUIFontManager.cpp
src/CEGUIFontProperties.cpp
src/CEGUIFormattedRenderedString.cpp
src/CEGUIFreeTypeFont.cpp
src/CEGUIFribidiVisualMapping.cpp
src/CEGUIGlobalEventSet.cpp
src/CEGUIGUILayout_xmlHandler.cpp
src/CEGUIImage.cpp
src/CEGUIImageCodec.cpp
src/CEGUIImageset.cpp
src/CEGUIImageset_xmlHandler.cpp
src/CEGUIImagesetManager.cpp
src/CEGUIJustifiedRenderedString.cpp
src/CEGUIJustifiedRenderedStringWordWrapper.cpp
src/CEGUILeftAlignedRenderedString.cpp
src/CEGUILogger.cpp
src/CEGUIMinibidiVisualMapping.cpp
src/CEGUIMouseCursor.cpp
src/CEGUINamedXMLResourceManager.cpp
src/CEGUIPCRERegexMatcher.cpp
src/CEGUIPixmapFont.cpp
src/CEGUIProperty.cpp
src/CEGUIPropertyHelper.cpp
src/CEGUIPropertySet.cpp
src/CEGUIRect.cpp
src/CEGUIRenderedString.cpp
src/CEGUIRenderedStringComponent.cpp
src/CEGUIRenderedStringImageComponent.cpp
src/CEGUIRenderedStringTextComponent.cpp
src/CEGUIRenderedStringWidgetComponent.cpp
src/CEGUIRenderingRoot.cpp
src/CEGUIRenderingSurface.cpp
src/CEGUIRenderingWindow.cpp
src/CEGUIRenderQueue.cpp
src/CEGUIRightAlignedRenderedString.cpp
src/CEGUIScheme.cpp
src/CEGUIScheme_xmlHandler.cpp
src/CEGUISchemeManager.cpp
src/CEGUIScriptModule.cpp
src/CEGUISize.cpp
src/CEGUIString.cpp
src/CEGUISubscriberSlot.cpp
src/CEGUISystem.cpp
src/CEGUITextUtils.cpp
src/CEGUIWindow.cpp
src/CEGUIWindowFactory.cpp
src/CEGUIWindowFactoryManager.cpp
src/CEGUIWindowManager.cpp
src/CEGUIWindowProperties.cpp
src/CEGUIWindowRenderer.cpp
src/CEGUIWindowRendererManager.cpp
src/CEGUIWindowRendererModule.cpp
src/CEGUIWRFactoryRegisterer.cpp
src/CEGUIXMLAttributes.cpp
src/CEGUIXMLHandler.cpp
src/CEGUIXMLParser.cpp
src/CEGUIXMLSerializer.cpp
src/elements/CEGUIButtonBase.cpp
src/elements/CEGUICheckbox.cpp
src/elements/CEGUICheckboxProperties.cpp
src/elements/CEGUIClippedContainer.cpp
src/elements/CEGUICombobox.cpp
src/elements/CEGUIComboboxProperties.cpp
src/elements/CEGUIComboDropList.cpp
src/elements/CEGUIDragContainer.cpp
src/elements/CEGUIDragContainerProperties.cpp
src/elements/CEGUIEditbox.cpp
src/elements/CEGUIEditboxProperties.cpp
src/elements/CEGUIFrameWindow.cpp
src/elements/CEGUIFrameWindowProperties.cpp
src/elements/CEGUIGroupBox.cpp
src/elements/CEGUIGUISheet.cpp
src/elements/CEGUIItemEntry.cpp
src/elements/CEGUIItemEntryProperties.cpp
src/elements/CEGUIItemListBase.cpp
src/elements/CEGUIItemListBaseProperties.cpp
src/elements/CEGUIItemListbox.cpp
src/elements/CEGUIItemListboxProperties.cpp
src/elements/CEGUIListbox.cpp
src/elements/CEGUIListboxItem.cpp
src/elements/CEGUIListboxProperties.cpp
src/elements/CEGUIListboxTextItem.cpp
src/elements/CEGUIListHeader.cpp
src/elements/CEGUIListHeaderProperties.cpp
src/elements/CEGUIListHeaderSegment.cpp
src/elements/CEGUIListHeaderSegmentProperties.cpp
src/elements/CEGUIMenubar.cpp
src/elements/CEGUIMenuBase.cpp
src/elements/CEGUIMenuBaseProperties.cpp
src/elements/CEGUIMenuItem.cpp
src/elements/CEGUIMultiColumnList.cpp
src/elements/CEGUIMultiColumnListProperties.cpp
src/elements/CEGUIMultiLineEditbox.cpp
src/elements/CEGUIMultiLineEditboxProperties.cpp
src/elements/CEGUIPopupMenu.cpp
src/elements/CEGUIPopupMenuProperties.cpp
src/elements/CEGUIProgressBar.cpp
src/elements/CEGUIProgressBarProperties.cpp
src/elements/CEGUIPushButton.cpp
src/elements/CEGUIRadioButton.cpp
src/elements/CEGUIRadioButtonProperties.cpp
src/elements/CEGUIScrollablePane.cpp
src/elements/CEGUIScrollablePaneProperties.cpp
src/elements/CEGUIScrollbar.cpp
src/elements/CEGUIScrollbarProperties.cpp
src/elements/CEGUIScrolledContainer.cpp
src/elements/CEGUIScrolledContainerProperties.cpp
src/elements/CEGUIScrolledItemListBase.cpp
src/elements/CEGUIScrolledItemListBaseProperties.cpp
src/elements/CEGUISlider.cpp
src/elements/CEGUISliderProperties.cpp
src/elements/CEGUISpinner.cpp
src/elements/CEGUISpinnerProperties.cpp
src/elements/CEGUITabButton.cpp
src/elements/CEGUITabControl.cpp
src/elements/CEGUITabControlProperties.cpp
src/elements/CEGUIThumb.cpp
src/elements/CEGUIThumbProperties.cpp
src/elements/CEGUITitlebar.cpp
src/elements/CEGUITitlebarProperties.cpp
src/elements/CEGUITooltip.cpp
src/elements/CEGUITooltipProperties.cpp
src/elements/CEGUITree.cpp
src/elements/CEGUITreeItem.cpp
src/elements/CEGUITreeProperties.cpp
src/falagard/CEGUIFalagard_xmlHandler.cpp
src/falagard/CEGUIFalComponentBase.cpp
src/falagard/CEGUIFalDimensions.cpp
src/falagard/CEGUIFalFrameComponent.cpp
src/falagard/CEGUIFalImageryComponent.cpp
src/falagard/CEGUIFalImagerySection.cpp
src/falagard/CEGUIFalLayerSpecification.cpp
src/falagard/CEGUIFalNamedArea.cpp
src/falagard/CEGUIFalPropertyDefinition.cpp
src/falagard/CEGUIFalPropertyDefinitionBase.cpp
src/falagard/CEGUIFalPropertyInitialiser.cpp
src/falagard/CEGUIFalPropertyLinkDefinition.cpp
src/falagard/CEGUIFalSectionSpecification.cpp
src/falagard/CEGUIFalStateImagery.cpp
src/falagard/CEGUIFalTextComponent.cpp
src/falagard/CEGUIFalWidgetComponent.cpp
src/falagard/CEGUIFalWidgetLookFeel.cpp
src/falagard/CEGUIFalWidgetLookManager.cpp
src/falagard/CEGUIFalXMLEnumHelper.cpp
#
src/minibidi.cpp
src/ScriptingModules/LuaScriptModule/CEGUILua.cpp
src/ScriptingModules/LuaScriptModule/CEGUILuaFunctor.cpp  
src/ScriptingModules/LuaScriptModule/required.cpp
src/WindowRendererSets/Falagard/FalButton.cpp
src/WindowRendererSets/Falagard/FalDefault.cpp
src/WindowRendererSets/Falagard/FalEditbox.cpp
src/WindowRendererSets/Falagard/FalEditboxProperties.cpp
src/WindowRendererSets/Falagard/FalFrameWindow.cpp
src/WindowRendererSets/Falagard/FalItemEntry.cpp
src/WindowRendererSets/Falagard/FalItemListbox.cpp
src/WindowRendererSets/Falagard/FalListbox.cpp
src/WindowRendererSets/Falagard/FalListHeader.cpp
src/WindowRendererSets/Falagard/FalListHeaderProperties.cpp
src/WindowRendererSets/Falagard/FalListHeaderSegment.cpp
src/WindowRendererSets/Falagard/FalMenubar.cpp
src/WindowRendererSets/Falagard/FalMenuItem.cpp
src/WindowRendererSets/Falagard/FalModule.cpp
src/WindowRendererSets/Falagard/FalMultiColumnList.cpp
src/WindowRendererSets/Falagard/FalMultiLineEditbox.cpp
src/WindowRendererSets/Falagard/FalMultiLineEditboxProperties.cpp
src/WindowRendererSets/Falagard/FalPopupMenu.cpp
src/WindowRendererSets/Falagard/FalProgressBar.cpp
src/WindowRendererSets/Falagard/FalProgressBarProperties.cpp
src/WindowRendererSets/Falagard/FalScrollablePane.cpp
src/WindowRendererSets/Falagard/FalScrollbar.cpp
src/WindowRendererSets/Falagard/FalScrollbarProperties.cpp
src/WindowRendererSets/Falagard/FalSlider.cpp
src/WindowRendererSets/Falagard/FalSliderProperties.cpp
src/WindowRendererSets/Falagard/FalStatic.cpp
src/WindowRendererSets/Falagard/FalStaticImage.cpp
src/WindowRendererSets/Falagard/FalStaticImageProperties.cpp
src/WindowRendererSets/Falagard/FalStaticProperties.cpp
src/WindowRendererSets/Falagard/FalStaticText.cpp
src/WindowRendererSets/Falagard/FalStaticTextProperties.cpp
src/WindowRendererSets/Falagard/FalSystemButton.cpp
src/WindowRendererSets/Falagard/FalTabButton.cpp
src/WindowRendererSets/Falagard/FalTabControl.cpp
src/WindowRendererSets/Falagard/FalTabControlProperties.cpp
src/WindowRendererSets/Falagard/FalTitlebar.cpp
src/WindowRendererSets/Falagard/FalToggleButton.cpp
src/WindowRendererSets/Falagard/FalTooltip.cpp
src/WindowRendererSets/Falagard/FalTree.cpp
#src/XMLParserModules/XercesParser/CEGUIXercesParser.cpp
#src/XMLParserModules/XercesParser/CEGUIXercesParserModule.cpp
#src/XMLParserModules/XercesParser/CEGUIXercesParserProperties.cpp

src/ImageCodecModules/TGAImageCodec/CEGUITGAImageCodec.cpp
src/ImageCodecModules/TGAImageCodec/CEGUITGAImageCodecModule.cpp

# XML
include/XMLParserModules/TinyXMLParser/CEGUITinyXMLParser.h
include/XMLParserModules/TinyXMLParser/CEGUITinyXMLParserModule.h
src/XMLParserModules/TinyXMLParser/ceguitinyxml/tinystr.h
src/XMLParserModules/TinyXMLParser/ceguitinyxml/tinyxml.h

src/XMLParserModules/TinyXMLParser/CEGUITinyXMLParser.cpp
src/XMLParserModules/TinyXMLParser/CEGUITinyXMLParserModule.cpp
src/XMLParserModules/TinyXMLParser/ceguitinyxml/tinystr.cpp
src/XMLParserModules/TinyXMLParser/ceguitinyxml/tinyxml.cpp
src/XMLParserModules/TinyXMLParser/ceguitinyxml/tinyxmlerror.cpp
src/XMLParserModules/TinyXMLParser/ceguitinyxml/tinyxmlparser.cpp

)

IF ( APPLE )
    SET(CEGUI_SOURCE ${CEGUI_SOURCE} src/implementations/mac/macPlugins.cpp src/implementations/mac/macPlugins.h )
    INCLUDE_DIRECTORIES( src/implementations/mac  src/XMLParserModules/TinyXMLParser
    include/XMLParserModules/TinyXMLParser src/XMLParserModules/TinyXMLParser/ceguitinyxml src/XMLParserModules/TinyXMLParser/ceguitinyxml)
ENDIF()

INCLUDE_DIRECTORIES( 
    include/elements 
    include/falagard 
    include
    include/ScriptingModules/LuaScriptModule 
    include/WindowRendererSets/Falagard 
    include/XMLParserModules/XercesParser
    src/ScriptingModules/LuaScriptModule AFTER
   )
   
ADD_DEFINITIONS( -DCEGUITGAIMAGECODEC_EXPORTS -DCEGUIBASE_EXPORTS -DCEGUILUA_EXPORTS -DCEGUIXERCESPARSER_EXPORTS -DCEGUI_WITH_TINYXML -DFALAGARDWRBASE_EXPORTS -DCEGUI_FALAGARD_RENDERER -DCEGUI_CODEC_TGA -DCEGUI_HAS_FREETYPE)

ADD_LIBRARY(cegui-freya STATIC ${CEGUI_SOURCE} )

